[gd_scene load_steps=6 format=2]

[ext_resource path="res://OpcionMultipleChoice.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/art/checkbox/spritesheetCheckbox.png" type="Texture" id=2]
[ext_resource path="res://QPF_assets/art/checkbox/checkboxFilling.png.png" type="Texture" id=3]
[ext_resource path="res://QPF_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[node name="OpcionMultipleChoice" type="Control" groups=[
"OpcionesMultipleChoice",
]]
margin_right = 720.0
margin_bottom = 97.0
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 623.0
margin_bottom = 107.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 623.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14

[node name="ButtonElegir" type="Button" parent="MarginContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 100.0
margin_bottom = 107.0
rect_min_size = Vector2( 100, 0 )

[node name="SpriteBorders" type="Sprite" parent="MarginContainer/HBoxContainer/ButtonElegir"]
position = Vector2( 49, 54.5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="SpriteFilling" type="Sprite" parent="MarginContainer/HBoxContainer/ButtonElegir"]
position = Vector2( 49, 54.5 )
scale = Vector2( 0.3, 0.3 )
z_index = -1
texture = ExtResource( 3 )

[node name="LabelDesc" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 114.0
margin_top = 8.0
margin_right = 623.0
margin_bottom = 99.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.105882, 0.105882, 0.105882, 1 )
custom_constants/shadow_offset_x = -2
custom_constants/shadow_offset_y = -1
custom_constants/shadow_as_outline = -1
text = "Sí, me quedé con ganas de jugar más!"
autowrap = true

[node name="TimerPostRta" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonElegir" to="." method="_on_ButtonElegir_pressed"]
